# ChildConicity

./: .coveragerc  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  README.es.md  README.md  pyproject.toml  rated_result.json  requirements.txt  run_tests.sh  test_reader.py
.github/workflows/: python-tests.yml
Corpus/Kuczaj/: 020424.cha  020500.cha  020507.cha  020510.cha  020514.cha  020516.cha  020520.cha  020522.cha  020523.cha  020526.cha  020529.cha  020604.cha  020606.cha  020610.cha  020614a.cha  020614b.cha  020614c.cha  020618.cha  020700.cha  020704.cha  020707.cha  020711.cha  020714.cha  020715.cha  (+186 more)
examples/: backup  gui.py  initialize_corpuses.py  main.py  main2.py  main3.py  main_rated.py  manual_reader_inspector.py
src/: __init__.py  data_analysis_plotter.py  gui_analysis_runner.py  reader.py
test/: test_age_group_analysis.py  test_bates_normalizer.py  test_brend_manipulator.py  test_corpus_cli.py  test_corpus_initializer.py  test_corpus_manipulator.py  test_corpus_processing_and_inspector.py  test_corpus_selection.py  test_data_analysis_plotter.py  test_data_formatter.py  test_download_corpora.py  test_download_iconicity_ratings.py  test_grammatical_cli.py  test_grammatical_pipeline.py  test_gui_analysis_runner.py  test_gui_app.py  test_gui_services.py  test_hslld_normalizer.py  test_i18n.py  test_iconicity_model.py  test_initialize_corpuses.py  test_kuczaj_normalizer.py  test_modify_post_files.py  test_modify_vankleeck_files.py  test_quarterly_samples.py  test_rated_exporter.py  test_reader.py  test_reorganize_newengland.py  test_sachs_normalizer.py  test_word_counter.py  test_word_dictionary_merger.py
(+1866 files in other folders)
