[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "childconicity"
version = "1.0.8"
description = "Process CHILDES/TalkBank corpora and analyze iconicity in child language development."
readme = "README.md"
license = { text = "BSL-1.0" }
requires-python = ">=3.10"
authors = [
    { name = "Iban Rodriguez Iglesias", email = "xxlgran@gmail.com" },
    { name = "ChildConic Foundation" },
]
keywords = ["childes", "talkbank", "iconicity", "corpus", "language-acquisition"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "selenium>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/ChildConicFoundation/ChildConicity"
Repository = "https://github.com/ChildConicFoundation/ChildConicity"
Issues = "https://github.com/ChildConicFoundation/ChildConicity/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["test"]
